# solar-ball

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.test  LICENSE  README.md  docker-compose.yml
docker/: mosquitto.conf
docs/: architecture.md  assembly_guide.md  calibration_procedure.md  operation_manual.md  operation_manual_en.md
firmware/: CMakeLists.txt  platformio.ini  sdkconfig.defaults
firmware/include/: calibrate.h  config.h  mqtt_4g.h  mqtt_protocol.h  sensor_calib.h  sensor_positions.h
firmware/main/: CMakeLists.txt  calibrate.c  calibrate.h  config.h  direction.c  direction.h  display.c  display.h  main.c  mqtt_4g.c  mqtt_4g.h  mqtt_protocol.h  ota.c  ota.h  power.c  remote_config.c  remote_config.h  remote_diag.c  remote_diag.h  sensor_calib.h  sensor_diag.c  sensor_diag.h  sensor_positions.h  sensor_scan.c  sensor_scan.h  sun_calc.c  sun_calc.h
firmware/scripts/: generate_sensor_coords.py
firmware/src/: calibrate.c  calibrate.h  direction.c  main.c  mqtt_4g.c  mqtt_4g.h  placeholder.c  power.c  power.h  sensor_scan.c  sensor_scan.h  sun_calc.c  sun_calc.h
hardware/: BOM.md  ball_design.md  dust_protection.md  schematic.md
tests/: run_all.py  run_integration.py  simulate.py  test_autocal_e2e.py  test_autocal_validation.py  test_calibration.py  test_direction.py  test_mqtt_protocol.py  test_power.py  test_remote_diag.py  test_saturation.py  test_weather.py
tools/: auto_calibrate.py  mqtt_receiver.py  ota_update.py  requirements.txt
web_dashboard/: Dockerfile  app.py  config.json  requirements.txt
(+5 files in other folders)
