idf_component_register(
    SRCS
        main.c
        sensor_scan.c
        direction.c
        mqtt_4g.c
        power.c
        calibrate.c
        sun_calc.c
        display.c
        sensor_diag.c
        remote_diag.c
    INCLUDE_DIRS
        .
    REQUIRES
        driver
        nvs_flash
        esp_adc
        esp_hw_support
        esp_timer
)
